Fixed the white space on the bottom of the website

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ button {
 .container {
   width: 100%;
   display: grid;
+  min-height: 100dvh;
   grid-template-columns: 20% 80%;
   background-color: lightblue;
 }
